# executor

./: CMakeLists.txt  README.md  azure-pipelines.yml  flake.nix
docker/: Dockerfile.x86_64
docs/: architecture.md
docs/subsystems/: app-launch.md  cpu-68k.md  cpu-ppc.md  debugger.md  event-manager.md  file-manager.md  hfs.md  local-volume.md  low-memory-globals.md  memory-manager.md  mixed-mode.md  quickdraw.md  resource-manager.md  sane.md  sound-manager.md  textedit-controls.md  trap-dispatch.md  video-driver.md  window-dialog-menu.md
src/: CMakeLists.txt  desk.cpp
src/config/front-ends/qt/: CMakeLists.txt  qt.cpp
src/config/front-ends/sdl/: sdlscrap.cpp  syswm_map.cpp  syswm_vars.h
src/file/localvolume/: itemcache.h  localvolume.cpp
src/mkhfsplus/: FastUnicodeCompare.cpp  mkhfsplus.cpp
src/quickdraw/: qGrafport.cpp
